// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results Item checks that item is rendered 1`] = `
<article
  className="results-item"
  id="i237hf"
>
  <div
    className="results-wrapper"
  >
    <img
      className="item-poster"
      src="../img/cat-image.jpeg"
    />
    <div
      className="item-info-wrapper"
    >
      <h3
        className="item-title"
      >
        Random movie
      </h3>
      <p
        className="item-year"
      >
        2010
      </p>
    </div>
    <button
      onClick={[Function]}
    >
       More 
    </button>
  </div>
  <div
    className="film-details"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <p
      className="film-runtime"
    >
       
      <b>
        Runtime:
      </b>
       
       
    </p>
    <p
      className="film-genre"
    >
       
      <b>
         Genre:
      </b>
       
       
    </p>
    <p
      className="film-plot"
    >
       
    </p>
  </div>
</article>
`;

exports[`Results Item esults item is rendered 1`] = `
<article
  className="results-item"
  id="i237hf"
>
  <div
    className="results-wrapper"
  >
    <img
      className="item-poster"
      src="../img/cat-image.jpeg"
    />
    <div
      className="item-info-wrapper"
    >
      <h3
        className="item-title"
      >
        Random movie
      </h3>
      <p
        className="item-year"
      >
        2010
      </p>
    </div>
    <button
      onClick={[Function]}
    >
       More 
    </button>
  </div>
  <div
    className="hide-details"
  >
    <p
      className="film-runtime"
    >
       
      <b>
        Runtime:
      </b>
       
       
    </p>
    <p
      className="film-genre"
    >
       
      <b>
         Genre:
      </b>
       
       
    </p>
    <p
      className="film-plot"
    >
       
    </p>
  </div>
</article>
`;
